# Yamabiko

./: PROCESS.md  README.md
2013-2/: .gitignore  README.md
2013-2/Article/: Makefile  Weightless Neural Networks for Depth Estimation.tex  architecture.odg  architecture_color.odg  bands.odg  case.odg  dispatcher.odg  fourier.odg  gaussian.odg  hypercube.odg  jsproceedings.cls  maps.odg  maps_color.odg  perceptron.odg  references.bib  sampler.odg  trie.odg  vg-ram.odg  weightless.odg  zeta.odg
2013-2/Presentation/: LICENSE.md  Weightless Neural Networks for Depth Estimation.odp
2013-3/: README.md
2013-3/Article/: Makefile  Monocular Estimation of Spatial Displacement.tex  bands.eps  distances.odg  environment.eps  mode_sideways.odg  mode_straight.odg  mode_turning.odg  naming.odg  path.odg  properties.odg  references.bib  segmentation.odg  sideways_absolute.odg  sideways_relative.odg  straight_absolute.odg  turning_absolute.odg  turning_relative.odg
2013-3/Code/: Workspace.workspace
2013-3/Data/: .gitignore  forward-2013-12-03-01.txt  forward-2014-01-09-01.txt  forward-2014-01-13-01.txt  forward-2014-01-16-01.txt  forward-2014-01-22-01.txt  forward-2014-01-24-01.txt  forward_plot.py  forward_statistics.py  normalize.py  out-2014-01-25-01.txt  plot_statistics.py  plot_statistics_3d.py  plot_statistics_bands.py  plot_statistics_direction.py  plot_statistics_relative.py  plot_statistics_slide.py  plot_statistics_straight.py  separator.py  sideways-2014-01-13-01.txt  sideways-2014-01-16-01.txt  sideways-2014-01-22-01.txt  turning-2013-12-03-01.txt  turning-2014-01-09-01.txt  turning_statistics.py
2013-3/Presentation/: Monocular Estimation of Spatial Displacement.odp
2014-1/: .gitignore
2014-1/Article/: Makefile  Mobile Robot Path Drift Estimation using Visual Streams.tex  car_park_3l_turn.odt  changes.odg  clutter.odg  corridor_3d_turn.odt  divs.odg  entrance_3l_shift.odt  entrance_3l_turn.odt  environments.odg  jsproceedings.cls  methods.odt  mismatch.odg  pedestrian.odg  references.bib  shift_problem.odg  slide_cc.odg  vector.odg
2014-1/Presentation/: methods.odt
2014-3/: Notes.txt
2014-3/Code/Cupido/: CMakeLists.txt
2014-3/Code/Cupido/script/: mul_fps.py
2014-3/Code/Cupido/src/: main.cpp
(+368 files in other folders)
